--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <div>
-  <mat-toolbar color="primary">
+  <mat-toolbar color="primary" style="background-color: black;">
     <span>
       <h1>Hudson Data</h1>
     </span>
