--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,35 +1,53 @@
-.example-spacer {
-  flex: 1 1 auto;
+.toolbar-container {
+  background-color: black;
 }
 
-.logoutButton {
+.toolbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 16px; /* Adjust padding as needed */
+  color: white; /* Text color for toolbar */
+}
+
+.title {
+  font-size: 24px; /* Adjust font size as needed */
+}
+
+.spacer {
+  flex: 1; /* Flexible space to push items to the right */
+}
+
+.username {
+  margin-right: 10px; /* Space between username and logout button */
+}
+
+.logout-button {
   height: 40px;
-  width: 12vh;
-  border: none;
-  color: black;
-  font-size: medium;
+  min-width: 80px; /* Adjust minimum width as needed */
+  padding: 0 12px;
+  font-size: 16px; /* Adjust font size as needed */
   font-weight: bold;
+  color: black; /* Text color for logout button */
 }
 
-@media only screen and (min-width: 320px) and (max-width: 480px) {
-  h1 {
-    font-size: 20px;
-    margin-top: 20px;
+/* Media Query for Small Screens */
+@media only screen and (max-width: 480px) {
+  .title {
+    font-size: 20px; /* Decrease font size for smaller screens */
+    margin-top: 10px; /* Add margin to title for spacing */
   }
 
-  .example-spacer {
-    display: none;
+  .spacer {
+    display: none; /* Hide spacer on small screens */
   }
 
-  .usernamee {
-    display: none;
+  .username,
+  .logout-button {
+    display: none; /* Hide username and logout button on small screens */
   }
 
-  .logoutButton {
-    font-size: 12px;
-    padding: 6px 12px;
-    height: 50%;
-    margin-left: 30%;
-
+  .toolbar {
+    padding: 0 10px; /* Adjust padding for smaller screens */
   }
 }
