--- a/src/app/search-page/search-page.component.css
+++ b/src/app/search-page/search-page.component.css
@@ -1,74 +1,71 @@
+.container {
+    padding: 20px;
+}
+
+.form-section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.dropdown {
+    flex: 1 0 45%;
+    margin-bottom: 20px;
+}
+
 .searchButton {
     height: 40px;
-    width: 20vh;
+    width: 150px;
     background-color: #3f51b5;
-    border: none;
     color: white;
     font-size: medium;
+    margin-top: 20px;
 }
 
 .counter {
-    margin-left: 40px;
     font-size: large;
     font-weight: bold;
-}
-
-.table {
-    margin: 30px 20px 0px 20px;
+    margin-top: 20px;
 }
 
 .loader-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
+    position: relative;
+    height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .loader {
-    display: inline-block;
-    width: 25px;
-    height: 25px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     border: 4px solid #ccc;
     border-top-color: #3f51b5;
     animation: spin 1s ease-in-out infinite;
 }
 
-.dropdown {
-    width: 80vh;
-    margin-left: 5vh;
-    margin-top: 5vh;
-    margin-right: 5vh;
+.table {
+    margin-top: 30px;
+}
+
+@media only screen and (max-width: 600px) {
+    .dropdown {
+        flex: 1 0 100%;
+        margin-right: 0;
+    }
+    .searchButton {
+        width: 100%;
+        margin-top: 20px;
+    }
+    .counter {
+        text-align: center;
+    }
 }
 
 @keyframes spin {
     to {
         transform: rotate(360deg);
-    }
-}
-
-@media only screen and (min-width: 320px) and (max-width: 480px) {
-    .dropdown {
-        width: 46vh;
-        margin: 8% 2% 3% 2%;
-    }
-    .searchButton {
-        height: 40px;
-        width: 46vh;
-        background-color: #3f51b5;
-        border: none;
-        color: white;
-        font-size: medium;
-        margin: 0% 2% 8% 2%;
-    }
-    .counter {
-        margin-left: 30%;
-        font-size: large;
-        font-weight: bold;
     }
 }
