--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -1,55 +1,72 @@
-<div>
-    <app-header></app-header>
-    <div>
-        <mat-form-field appearance="fill" class="dropdown">
-            <mat-label>Country</mat-label>
-            <mat-select [(ngModel)]="selectedCountry" name="selectedCountry">
-                <mat-option *ngFor="let country of countries" [value]="country">{{ country }}</mat-option>
-            </mat-select>
-        </mat-form-field>
-        <!-- other country -->
-        <mat-form-field appearance="fill" class="dropdown">
-            <mat-label>Other Country</mat-label>
-            <input matInput type="text" [(ngModel)]="otherCountry" name="otherCountry" />
-        </mat-form-field>
-        <button mat-raised-button (click)="onSearch()" class="searchButton">Search</button>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>University Search</title>
+    <!-- Angular Material Styles -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <!-- Angular Material Theming -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/@angular/material/13.0.0-pre.0/core/theming/prebuilt/deeppurple-amber.css"
+        rel="stylesheet">
+</head>
+
+<body>
+    <div class="container">
+        <div class="form-section">
+            <mat-form-field appearance="fill" class="dropdown">
+                <mat-label>Country</mat-label>
+                <mat-select [(ngModel)]="selectedCountry" name="selectedCountry">
+                    <mat-option *ngFor="let country of countries" [value]="country">{{ country }}</mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field appearance="fill" class="dropdown">
+                <mat-label>Other Country</mat-label>
+                <input matInput type="text" [(ngModel)]="otherCountry" name="otherCountry" />
+            </mat-form-field>
+            <button mat-raised-button (click)="onSearch()" class="searchButton">Search</button>
+        </div>
+        <div class="counter">
+            <span>Search count: {{ searchCount }}</span>
+        </div>
+        <div class="loader-container" *ngIf="isLoading">
+            <mat-progress-spinner class="loader"></mat-progress-spinner>
+        </div>
+        <div class="table" *ngIf="showTable && !isLoading">
+            <mat-table [dataSource]="universities" class="mat-elevation-z8">
+                <!-- Define your columns here -->
+                <ng-container matColumnDef="name">
+                    <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
+                    <mat-cell *matCellDef="let university">{{ university.name }}</mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="stateProvince">
+                    <mat-header-cell *matHeaderCellDef>State/Province</mat-header-cell>
+                    <mat-cell *matCellDef="let university">{{ university['state-province'] || '-' }}</mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="domain">
+                    <mat-header-cell *matHeaderCellDef>Domain</mat-header-cell>
+                    <mat-cell *matCellDef="let university">
+                        <a [href]="university.domains[0]" target="_blank">{{ university.domains[0] }}</a>
+                    </mat-cell>
+                </ng-container>
+                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+            </mat-table>
+            <mat-paginator [length]="length" [pageSize]="pageSize" [pageSizeOptions]="pageSizeOptions"
+                (page)="onPageChange($event)"></mat-paginator>
+        </div>
     </div>
-    <div class="counter">
-        <span>Search count: {{ searchCount }}</span>
-    </div>
-    <div class="loader-container" *ngIf="isLoading">
-        <mat-progress-spinner class="loader"></mat-progress-spinner>
-    </div>
-    <div class="table" *ngIf="showTable && !isLoading">
-        <mat-table [dataSource]="universities" class="mat-elevation-z8">
-            <!-- Name column -->
-            <ng-container matColumnDef="name">
-                <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
-                <mat-cell *matCellDef="let university">{{ university.name }}</mat-cell>
-            </ng-container>
 
-            <!-- State/Province column -->
-            <ng-container matColumnDef="stateProvince">
-                <mat-header-cell *matHeaderCellDef>State/Province</mat-header-cell>
-                <mat-cell *matCellDef="let university">{{ university['state-province'] || '-' }}</mat-cell>
-            </ng-container>
+    <!-- Angular Scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/13.0.0-pre.0/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/13.0.0-pre.0/angular-animate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/13.0.0-pre.0/angular-aria.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/13.0.0-pre.0/angular-messages.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/13.0.0-pre.0/angular-material.min.js"></script>
+    <!-- Your Angular Application Script -->
+    <script src="app.js"></script>
+</body>
 
-            <!-- Domain column -->
-            <ng-container matColumnDef="domain">
-                <mat-header-cell *matHeaderCellDef>Domain</mat-header-cell>
-                <mat-cell *matCellDef="let university">
-                    <a [href]="university.domains[0]" target="_blank">{{ university.domains[0] }}</a>
-                </mat-cell>
-            </ng-container>
-
-            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-        </mat-table>
-        
-        <!-- Add this after the mat-table closing tag -->
-        <mat-paginator [length]="length" [pageSize]="pageSize" [pageSizeOptions]="pageSizeOptions"
-            (page)="onPageChange($event)"></mat-paginator>
-
-    </div>
-
-</div>
+</html>
